--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-preset-react": "^6.23.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "2.24.0",
+    "lodash": "^4.17.4",
+    "open-browser-webpack-plugin": "0.0.5",
     "source-map-loader": "^0.2.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
